# libnurbs

./: CMakeLists.txt  COPYING  README  makefile  opennurbs.h  opennurbs_3dm.h  opennurbs_3dm_attributes.cpp  opennurbs_3dm_attributes.h  opennurbs_3dm_properties.cpp  opennurbs_3dm_settings.cpp  opennurbs_annotation2.cpp  opennurbs_annotation2.h  opennurbs_arccurve.cpp  opennurbs_archive.cpp  opennurbs_archive.h  opennurbs_array.h  opennurbs_array_defs.h  opennurbs_basic.cpp  opennurbs_beam.cpp  opennurbs_beam.h  opennurbs_bezier.cpp  opennurbs_bezier.h  opennurbs_brep.cpp  opennurbs_brep.h  opennurbs_brep_extrude.cpp  opennurbs_brep_io.cpp  opennurbs_brep_region.cpp  opennurbs_brep_tools.cpp  opennurbs_brep_v2valid.cpp  opennurbs_color.cpp  opennurbs_color.h  opennurbs_curve.cpp  opennurbs_curve.h  opennurbs_defines.cpp  opennurbs_defines.h  opennurbs_dimstyle.cpp  opennurbs_dimstyle.h  opennurbs_error.cpp  opennurbs_error.h  opennurbs_error_message.cpp  (+48 more)
CMake/: CompilerFlags.cmake
doc/: CMakeLists.txt
doc/doxygen/: CMakeLists.txt  Doxyfile.in
doc/licenses/: LIBNURBS-COPYING  opennurbs.txt
example_dump/: example_dump.cpp
example_gl/: example_gl.cpp
opennurbs.xcodeproj/: project.pbxproj
src/: CMakeLists.txt  opennurbs_3dm_attributes.h  opennurbs_3dm_properties.cpp  opennurbs_3dm_settings.cpp  opennurbs_annotation.h  opennurbs_annotation2.cpp  opennurbs_annotation2.h  opennurbs_arccurve.cpp  opennurbs_arccurve.h  opennurbs_archive.cpp  opennurbs_array_defs.h  opennurbs_beam.h  opennurbs_bezier.cpp  opennurbs_beziervolume.cpp  opennurbs_bitmap.h  opennurbs_bounding_box.cpp  opennurbs_brep.cpp  opennurbs_brep.h  opennurbs_brep_region.cpp  opennurbs_curve.h  opennurbs_curveonsurface.h  opennurbs_curveproxy.h  opennurbs_defines.h  opennurbs_detail.h  opennurbs_dimstyle.cpp  opennurbs_dimstyle.h  opennurbs_font.cpp  opennurbs_font.h  opennurbs_geometry.h  opennurbs_group.h  opennurbs_hatch.cpp  opennurbs_hatch.h  opennurbs_instance.h  opennurbs_layer.cpp  opennurbs_layer.h  opennurbs_light.h  opennurbs_linecurve.cpp  opennurbs_linecurve.h  opennurbs_linetype.h  opennurbs_lookup.cpp  (+37 more)
src/example_brep/: CMakeLists.txt
src/example_dump/: CMakeLists.txt
src/example_gl/: CMakeLists.txt  example_gl.cpp
src/example_read/: CMakeLists.txt
src/example_roundtrip/: CMakeLists.txt
src/example_userdata/: CMakeLists.txt  example_ud.h  example_userdata.cpp
src/example_write/: CMakeLists.txt
src/other/freeglut/: CMakeLists.txt
src/other/freeglut/demos/: CMakeLists.txt
src/other/freeglut/demos/CallbackMaker/: CMakeLists.txt
src/other/freeglut/include/: freeglut_config.h.in
src/other/freeglut/src/: CMakeLists.txt  freeglut_internal.h
src/other/glui/: CMakeLists.txt
src/other/glui/example/: CMakeLists.txt
src/other/glui/src/: CMakeLists.txt
src/other/phash/: CMakeLists.txt  README  main.c  perfect.c  perfhex.c  recycle.c  samperf2.txt  standard.h  testperf.c
src/other/phash/examples/: samperf.txt
src/other/rayslope/: CMakeLists.txt  README  aabox.cpp  aabox.h  ray.cpp  ray.h  slope.cpp  slope.h  slopeint_div.cpp  slopeint_div.h  slopeint_mul.cpp  slopeint_mul.h
src/viewer/: CMakeLists.txt  viewer.cpp
zlib/: zlib.vcproj
