CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
IF(COMMAND CMAKE_POLICY)
	CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

PROJECT(FREEGLUT)

find_package(OpenGL)

# System checks
INCLUDE(CheckIncludeFile)
INCLUDE(CheckFunctionExists)
CHECK_INCLUDE_FILE(dlfcn.h HAVE_DLFCN_H)
CHECK_INCLUDE_FILE(fcntl.h HAVE_FCNTL_H)
CHECK_FUNCTION_EXISTS(gettimeofday HAVE_GETTIMEOFDAY)
CHECK_INCLUDE_FILE(GL/glu.h HAVE_GL_GLU_H)
CHECK_INCLUDE_FILE(GL/glx.h HAVE_GL_GLX_H)
CHECK_INCLUDE_FILE(GL/gl.h HAVE_GL_GL_H)
CHECK_INCLUDE_FILE(X11/extensions/xf86vmode.h HAVE_X11_EXTENSIONS_XF86VMODE_H)
CHECK_INCLUDE_FILE(X11/extensions/XInput.h HAVE_X11_EXTENSIONS_XINPUT_H)
CHECK_INCLUDE_FILE(X11/extensions/XI.h HAVE_X11_EXTENSIONS_XI_H)
CHECK_INCLUDE_FILE(sys/ioctl.h HAVE_SYS_IOCTL_H)
CHECK_INCLUDE_FILE(sys/time.h HAVE_SYS_TIME_H)
CHECK_INCLUDE_FILE(sys/types.h HAVE_SYS_TYPES_H)
CHECK_INCLUDE_FILE(sys/stat.h HAVE_SYS_STAT_H)
CHECK_INCLUDE_FILE(stdlib.h HAVE_STDLIB_H)
CHECK_INCLUDE_FILE(memory.h HAVE_MEMORY_H)
CHECK_INCLUDE_FILE(string.h HAVE_STRING_H)
CHECK_INCLUDE_FILE(strings.h HAVE_STRINGS_H) 
CHECK_INCLUDE_FILE(inttypes.h HAVE_INTTYPES_H) 
CHECK_INCLUDE_FILE(stdint.h HAVE_STDINT_H) 
CHECK_INCLUDE_FILE(stddef.h HAVE_STDDEF_H) 
CHECK_INCLUDE_FILE(unistd.h HAVE_UNISTD_H) 
CHECK_INCLUDE_FILE(limits.h HAVE_LIMITS_H) 
CHECK_INCLUDE_FILE(sys/param.h HAVE_SYS_PARAM_H)

SET(STDC_HEADERS 1)
SET(TIME_WITH_SYS_TIME 1)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/include/freeglut_config.h.in ${CMAKE_CURRENT_BINARY_DIR}/include/config.h)

ADD_DEFINITIONS(-DHAVE_CONFIG_H=1)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(demos)
